<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <FrameLayout
        android:id="@+id/flMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_home_wave"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:id="@+id/rlAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="15dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="-20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_date" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="25dp"
                    android:layout_toEndOf="@id/imgDate"
                    android:text="@string/date"
                    android:textColor="@color/bg_login"
                    android:textSize="12sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <TextView
        android:id="@+id/tvMainSalam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flMain"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/salam"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/llCurved"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/flMain"
        android:background="@drawable/bg_home_curve"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/llCurved"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_marginTop="56dp"
            android:src="@drawable/llogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/biru"
            android:textSize="22sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/Tokped"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_background"
            android:text="@string/toko"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_WA"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/button_background"
            android:text="@string/email"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_HB"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/button_background"
            android:text="@string/telepone"
            android:textColor="@android:color/white"
            android:textSize="18sp" />



    </LinearLayout>

</RelativeLayout>